--- a/Aula06/ex004.html
+++ b/Aula06/ex004.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <h1>Olá</h1>
     <script>
         var nome = window.prompt('Qual é seu nome?');
         document.write(`Olá, <strong>${nome}</strong>! Seu nome tem ${nome.length} letras.<br/>`);
