--- a/Aula11/desafio.html
+++ b/Aula11/desafio.html
@@ -44,7 +44,7 @@
 <body>
     <div id="nac">
         <h1>Qual a sua nacionalidade?</h1>
-        Que país você mora? <input type="text" name="txtnac" id="nac"> <br><br>
+        Que país você mora? <input type="text" name="txtnac" id="novid"> <br><br>
         <input type="button" value="Verificar nacionalidade" onclick="calcular()">
     </div>
     <div id="res">
@@ -52,10 +52,10 @@
     </div>   
     <script>
         function calcular() {
-            var país = document.getElementById('nac')
+            var pais = document.getElementById('novid').value
             var res = document.querySelector('div#res')
 
-            if (país == 'Brasil') {
+            if (pais == 'Brasil') {
                 res.innerHTML = ('Você é brasileiro!')
             } else {
                 res.innerHTML = ('Você é estrangeiro!')
